[gd_scene load_steps=9 format=3 uid="uid://c21x2ty0gdut3"]

[ext_resource type="Script" path="res://Code/Main.gd" id="1_q0oae"]
[ext_resource type="PackedScene" uid="uid://b71a1ul30k024" path="res://Scenes/Player.tscn" id="2_6rdrn"]
[ext_resource type="Material" uid="uid://dkxr0wkmtmubf" path="res://Materials/Wall.material" id="3_0o3m4"]
[ext_resource type="PackedScene" uid="uid://ltxxlmstcipn" path="res://Scenes/Score.tscn" id="3_sgxjt"]
[ext_resource type="Texture2D" uid="uid://dhtkhwyl0bmq7" path="res://Resourcdes/Space.jpg" id="6_n0l04"]

[sub_resource type="BoxMesh" id="BoxMesh_rtghv"]
material = ExtResource("3_0o3m4")

[sub_resource type="BoxShape3D" id="BoxShape3D_dp2i6"]
size = Vector3(46.678, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oqhb0"]
material = ExtResource("3_0o3m4")

[node name="Main" type="Node3D"]
script = ExtResource("1_q0oae")

[node name="Player" parent="." groups=["Player"] instance=ExtResource("2_6rdrn")]
transform = Transform3D(0.8, -4.76837e-08, -9.53672e-08, 4.76837e-08, 0.8, 1.1921e-08, 9.53672e-08, -1.1921e-08, 0.8, 0, 0, 0)

[node name="ShootCooldown" type="Timer" parent="Player"]
wait_time = 0.25

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.984808, 0.173648, 0, 0.173648, 0.984808, -1, 4.30473e-08, -7.5904e-09, 5.9206, 22.855, -6.32799e-07)
fov = 90.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.939693, 0.34202, 0, 0.34202, 0.939693, -1, 4.10753e-08, -1.49502e-08, 18.5761, 15.2549, 0.562506)
light_energy = 4.0

[node name="RightWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, -0.642788, 0, 0.642788, 0.766044, -2, 0, -18)
collision_layer = 16
collision_mask = 31
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWall"]
transform = Transform3D(46.678, 0, 2.98023e-08, 0, 1, 0, -1.39111e-06, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_rtghv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall"]
transform = Transform3D(1, 0, -1.87755e-06, 0, 1, 0, 1.87755e-06, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_dp2i6")

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, -2, 0, 18)
collision_layer = 31
collision_mask = 31
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftWall"]
transform = Transform3D(46.678, 0, 2.98023e-08, 0, 1, 0, -1.39111e-06, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_oqhb0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
transform = Transform3D(1, 0, -1.87755e-06, 0, 1, 0, 1.87755e-06, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_dp2i6")

[node name="Location" type="Node" parent="."]

[node name="Paths" type="Node" parent="Location"]

[node name="Spawns" type="Node" parent="Location"]

[node name="MobSpawn" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.6605, 0, 15)

[node name="MobSpawn2" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, 11.25)

[node name="MobSpawn3" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, 7.5)

[node name="MobSpawn4" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, 3.75)

[node name="MobSpawn5" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.6605, 0, 0)

[node name="MobSpawn6" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, -3.75)

[node name="MobSpawn7" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, -7.5)

[node name="MobSpawn8" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, -11.25)

[node name="MobSpawn9" type="Marker3D" parent="Location/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.66, 0, -15)

[node name="Reference" type="Node" parent="Location"]

[node name="UpLeft" type="Marker3D" parent="Location/Reference"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.7849, 0, 39.8621)

[node name="Upright" type="Marker3D" parent="Location/Reference"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.785, 0, -39.862)

[node name="BottomRight" type="Marker3D" parent="Location/Reference"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2676, 0, -20.7873)

[node name="BottomLeft" type="Marker3D" parent="Location/Reference"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.268, 0, 20.787)

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" parent="." instance=ExtResource("3_sgxjt")]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-4.15788e-07, -9.36758, -1.65176, 0, 1.65176, -9.36758, 9.51213, -4.0947e-07, -7.22006e-08, 0, -33, 0)
texture = ExtResource("6_n0l04")

[connection signal="timeout" from="Player/ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timeout"]
